style(_animation-mixins.scss): Set @mixin hover-underline-self line-height to 100% to fix hover underline gap

--- a/src/scss/abstracts/_animation-mixins.scss
+++ b/src/scss/abstracts/_animation-mixins.scss
@@ -3,6 +3,7 @@
 
 @mixin hover-underline-self($text-underline-color, $scale-hover: 1.01, $scale-active: 1) {
     & {
+        line-height: 100%;
         position: relative;
         color: $text-underline-color;
         margin-bottom: 0;
